--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,114 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="hr.tvz.quiz.MainActivity">
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="hr.tvz.quiz.SignUpActivity"
+    android:weightSum="1">
 
-    <TextView
-        android:id="@+id/NametextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
-
-    <Button
-        android:id="@+id/button"
+    <ScrollView
+        android:id="@+id/main_form"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView_student_image_main"
+                    android:layout_width="125dp"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="false"
+                    app:srcCompat="@mipmap/ic_launcher" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="121dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView_title_main"
+                        android:layout_width="match_parent"
+                        android:layout_height="30.74dp"
+                        android:gravity="center_vertical"
+                        android:text="@string/student_title"
+                        android:textAlignment="center"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/textView_name_main"
+                        android:layout_width="match_parent"
+                        android:layout_height="30.74dp"
+                        android:gravity="center_vertical"
+                        android:text="@string/student_name"
+                        android:textAlignment="center"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/textView_semester_main"
+                        android:layout_width="match_parent"
+                        android:layout_height="30.74dp"
+                        android:gravity="center_vertical"
+                        android:text="@string/student_semester"
+                        android:textAlignment="center"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/textView_course_main"
+                        android:layout_width="match_parent"
+                        android:layout_height="30.74dp"
+                        android:gravity="center_vertical"
+                        android:text="@string/student_course"
+                        android:textAlignment="center"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <Spinner
+                android:id="@+id/spinner_semester_main"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:dropDownWidth="match_parent" />
+
+            <Spinner
+                android:id="@+id/spinner_course_main"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:dropDownWidth="match_parent" />
+
+            <Spinner
+                android:id="@+id/spinner_subject_main"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:dropDownWidth="match_parent" />
+
+            <Button
+                android:id="@+id/button_play"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/action_play"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
