--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     android:weightSum="1">
 
     <ScrollView
-        android:id="@+id/main_form"
+        android:id="@+id/scrollView_main_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -107,7 +107,8 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/action_play"
                 android:textAlignment="center"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="visible" />
 
         </LinearLayout>
     </ScrollView>
