--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -66,9 +66,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_password"
-                    android:imeActionId="@+id/registration"
-                    android:imeActionLabel="@string/action_registration"
-                    android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1" />
 
@@ -83,9 +80,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_repeat_password"
-                    android:imeActionId="@+id/login"
-                    android:imeActionLabel="@string/action_registration"
-                    android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1" />
 
@@ -106,7 +100,7 @@
                 android:dropDownWidth="match_parent" />
 
             <Button
-                android:id="@+id/button_registration"
+                android:id="@+id/button_sign_up"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -115,7 +109,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView_forgotten_password"
+                android:id="@+id/textView_login"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
