--- a/app/src/main/res/layout/activity_play_mode.xml
+++ b/app/src/main/res/layout/activity_play_mode.xml
@@ -8,8 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="hr.tvz.quiz.LoginActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <ScrollView
         android:id="@+id/scrollView_play_mode_form"
@@ -30,6 +29,7 @@
                 app:srcCompat="@mipmap/ic_launcher_round" />
 
             <TextView
+                android:id="@+id/textView_mode_name"
                 android:layout_width="match_parent"
                 android:layout_height="30.74dp"
                 android:gravity="center_vertical"
@@ -39,6 +39,7 @@
                 android:textSize="14sp" />
 
             <TextView
+                android:id="@+id/textView_mode_coverage"
                 android:layout_width="match_parent"
                 android:layout_height="30.74dp"
                 android:gravity="center_vertical"
