Added Fragment - Question Report Added RecyclerView Items Edited - Activity Single Player End Result Edited - Strings

--- a/app/src/main/res/layout/activity_single_player_end_result.xml
+++ b/app/src/main/res/layout/activity_single_player_end_result.xml
@@ -9,7 +9,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="hr.tvz.quiz.SignUpActivity"
     android:weightSum="1">
 
     <ScrollView
@@ -24,7 +23,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView_student_image_main"
+                android:id="@+id/imageView_student_image_single_player_end_result"
                 android:layout_width="115dp"
                 android:layout_height="104dp"
                 android:adjustViewBounds="false"
@@ -75,7 +74,11 @@
 
                 </LinearLayout>
             </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+            </android.support.v7.widget.RecyclerView>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
