Added Activities: - Admin Reported Question - Admin Reported Questions Edited Activities: - Activity Main - Activity Single Player End Result Edited Fragment: - Fragment Question Reports Added RecyclerViews: - RecyclerView Reported Question - RecyclerView User Report

--- a/app/src/main/res/layout/activity_single_player_end_result.xml
+++ b/app/src/main/res/layout/activity_single_player_end_result.xml
@@ -75,6 +75,7 @@
                 </LinearLayout>
             </LinearLayout>
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView_question_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
