--- a/app/src/main/res/layout/fragment_question_report.xml
+++ b/app/src/main/res/layout/fragment_question_report.xml
@@ -5,10 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:background="@color/white">
 
     <ScrollView
         android:id="@+id/scrollView_question_report_form"
@@ -20,16 +17,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:weightSum="1">
-
-            <TextView
-                android:id="@+id/textView_current_question_report"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:text="@string/current_question_single_player"
-                android:textAlignment="center"
-                android:textAllCaps="false"
-                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/textView_question_report"
