--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,114 +1,132 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:weightSum="1">
+    android:layout_height="match_parent">
 
-    <ScrollView
-        android:id="@+id/scrollView_main_form"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:weightSum="1">
 
-            <LinearLayout
+            <ScrollView
+                android:id="@+id/scrollView_main_form"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/imageView_student_image_main"
-                    android:layout_width="125dp"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="false"
-                    app:srcCompat="@mipmap/ic_launcher" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="121dp"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/textView_title_main"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="30.74dp"
-                        android:gravity="center_vertical"
-                        android:text="@string/student_title"
-                        android:textAlignment="center"
-                        android:textSize="14sp" />
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/textView_name_main"
-                        android:layout_width="match_parent"
-                        android:layout_height="30.74dp"
-                        android:gravity="center_vertical"
-                        android:text="@string/student_name"
-                        android:textAlignment="center"
-                        android:textSize="14sp" />
+                        <ImageView
+                            android:id="@+id/imageView_student_image_main"
+                            android:layout_width="125dp"
+                            android:layout_height="match_parent"
+                            android:adjustViewBounds="false"
+                            app:srcCompat="@mipmap/ic_launcher" />
 
-                    <TextView
-                        android:id="@+id/textView_semester_main"
-                        android:layout_width="match_parent"
-                        android:layout_height="30.74dp"
-                        android:gravity="center_vertical"
-                        android:text="@string/student_semester"
-                        android:textAlignment="center"
-                        android:textSize="14sp" />
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="121dp"
+                            android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/textView_course_main"
+                            <TextView
+                                android:id="@+id/textView_title_main"
+                                android:layout_width="match_parent"
+                                android:layout_height="30.74dp"
+                                android:gravity="center_vertical"
+                                android:text="@string/student_title"
+                                android:textAlignment="center"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:id="@+id/textView_name_main"
+                                android:layout_width="match_parent"
+                                android:layout_height="30.74dp"
+                                android:gravity="center_vertical"
+                                android:text="@string/student_name"
+                                android:textAlignment="center"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:id="@+id/textView_semester_main"
+                                android:layout_width="match_parent"
+                                android:layout_height="30.74dp"
+                                android:gravity="center_vertical"
+                                android:text="@string/student_semester"
+                                android:textAlignment="center"
+                                android:textSize="14sp" />
+
+                            <TextView
+                                android:id="@+id/textView_course_main"
+                                android:layout_width="match_parent"
+                                android:layout_height="30.74dp"
+                                android:gravity="center_vertical"
+                                android:text="@string/student_course"
+                                android:textAlignment="center"
+                                android:textSize="14sp" />
+
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <Spinner
+                        android:id="@+id/spinner_semester_main"
                         android:layout_width="match_parent"
-                        android:layout_height="30.74dp"
-                        android:gravity="center_vertical"
-                        android:text="@string/student_course"
+                        android:layout_height="wrap_content"
+                        android:background="#ffffff"
+                        android:dropDownWidth="match_parent" />
+
+                    <Spinner
+                        android:id="@+id/spinner_course_main"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#ffffff"
+                        android:dropDownWidth="match_parent" />
+
+                    <Spinner
+                        android:id="@+id/spinner_subject_main"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#ffffff"
+                        android:dropDownWidth="match_parent" />
+
+                    <Button
+                        android:id="@+id/button_play"
+                        style="?android:textAppearanceSmall"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/action_play"
                         android:textAlignment="center"
-                        android:textSize="14sp" />
+                        android:textStyle="bold"
+                        android:visibility="visible" />
 
                 </LinearLayout>
-            </LinearLayout>
+            </ScrollView>
+        </FrameLayout>
 
-            <Spinner
-                android:id="@+id/spinner_semester_main"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:dropDownWidth="match_parent" />
+    <ListView android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#ffffff"/>
 
-            <Spinner
-                android:id="@+id/spinner_course_main"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:dropDownWidth="match_parent" />
-
-            <Spinner
-                android:id="@+id/spinner_subject_main"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#ffffff"
-                android:dropDownWidth="match_parent" />
-
-            <Button
-                android:id="@+id/button_play"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/action_play"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:visibility="visible" />
-
-        </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+</android.support.v4.widget.DrawerLayout>
