--- a/app/src/main/res/layout/recyclerview_score_table.xml
+++ b/app/src/main/res/layout/recyclerview_score_table.xml
@@ -16,34 +16,28 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-       <TextView
-            android:id="@+id/textView_admin_user_name"
-            android:layout_width="100dp"
+        <TextView
+            android:id="@+id/textView_student_ordinal_number"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:layout_marginRight="6dp"
+            android:layout_marginRight="10dp"
             android:gravity="center|center_vertical"
             android:textAlignment="center" />
 
         <TextView
-            android:id="@+id/textView_reported_question"
-            android:layout_width="157dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="5dp"
+            android:id="@+id/textView_student_name"
+            android:layout_width="190dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:gravity="center|center_vertical"
             android:textAlignment="center" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/textView_student_score"
+            android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:gravity="center|center_vertical"
+            android:textAlignment="center" />
 
-            <Button
-                android:id="@+id/button_see_report_question"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/action_view_reported_question" />
-
-        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
