--- a/app/src/main/res/layout/recyclerview_statistics.xml
+++ b/app/src/main/res/layout/recyclerview_statistics.xml
@@ -12,37 +12,35 @@
     android:weightSum="1">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-       <TextView
-            android:id="@+id/textView_admin_user_name"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="6dp"
-            android:gravity="center|center_vertical"
-            android:textAlignment="center" />
+        <ImageView
+            android:id="@+id/imageView_student_one_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:adjustViewBounds="false"
+            app:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
-            android:id="@+id/textView_reported_question"
-            android:layout_width="157dp"
+            android:id="@+id/textView_player_vs_player_result"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
-            android:layout_marginRight="5dp"
             android:gravity="center|center_vertical"
             android:textAlignment="center" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/button_see_report_question"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/action_view_reported_question" />
+            <ImageView
+                android:id="@+id/imageView_imageView_student_two_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:adjustViewBounds="false"
+                app:srcCompat="@mipmap/ic_launcher" />
 
         </LinearLayout>
     </LinearLayout>
